--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "login.dfe.request-verification",
   "version": "1.0.0",
   "description": "request verification",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec"
   },
