--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "request verification",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "format": "prettier . --write"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "eslint-plugin-jest": "^27.6.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "prettier": "^3.5.3",
     "sequelize-mock": "^0.10.2"
   }
 }
