--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest --coverage",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "repository": {
     "type": "git",
@@ -22,8 +26,10 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-jest": "^27.6.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
     "sequelize-mock": "^0.10.2"
   }
