--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "request verification",
   "main": "src/index.js",
   "scripts": {
+    "dev:checks": "npm run lint && npm run test",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:report": "eslint . -f junit -o eslint-results.xml",
     "test": "jest --coverage",
     "format": "prettier . --write",
     "prepare": "husky"
@@ -22,10 +26,11 @@
   },
   "homepage": "https://github.com/DFE-Digital/login.dfe.request-verification#readme",
   "devDependencies": {
-    "eslint": "^8.53.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-jest": "^27.6.0",
+    "@eslint/js": "^9.26.0",
+    "eslint": "^9.26.0",
+    "eslint-formatter-junit": "^8.40.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
