--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint . --fix",
     "lint:report": "eslint . -f junit -o eslint-results.xml",
     "test": "jest --coverage",
+    "test:report": "jest --coverage --reporters=default --reporters jest-junit --coverageReporters=clover",
     "format": "prettier . --write",
     "prepare": "husky"
   },
@@ -34,6 +35,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
     "sequelize-mock": "^0.10.2"
